src/objects/cb5__CBStyle__c.object
<CustomObject>
    <fields>
        <fullName>cb5__BackgroundColor__c</fullName>
        <label>Background Color</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__CSS__c</fullName>
        <formula>&apos; { &apos; + 
&apos;color:&apos; +  cb5__Color__c + &apos; !important; &apos; +
&apos;font-weight:&apos; +  cb5__FontWeight__c + &apos; !important; &apos; + 
&apos;font-family: &apos; +  cb5__Font__c + &apos; !important; &apos; + 
&apos;background-color:&apos; +  cb5__BackgroundColor__c + &apos; !important; &apos; + 
&apos;pointer-events:&apos; +  cb5__State__c + &apos; !important; &apos; + 
&apos; } &apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CSS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__Color__c</fullName>
        <label>Text Color</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__FontWeight__c</fullName>
        <label>Font Weight</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__Font__c</fullName>
        <label>Font Family</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__State__c</fullName>
        <label>State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>CB Style</label>
    <listViews>
        <fullName>cb5__All</fullName>
        <columns>NAME</columns>
        <columns>cb5__CSS__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CBStyle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CB Styles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>cb5__Unique_Name_field</fullName>
        <active>false</active>
        <errorConditionFormula>true</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>The style with this name already exists, please enter a different name</errorMessage>
    </validationRules>
</CustomObject>